--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Akshay Shankar"
   avatar           : "profile.png"
-  bio              : 5th Year BS-MS student at IISER Mohali"
+  bio              : 5th Year BS-MS student at IISER Mohali
   location         : 
   employer         :
   pubmed           : 
