--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,11 +14,11 @@ main:
   - title: "Gallery"
     url: /gallery/   
 
-  # - title: "Talks"
-  #   url: /talks/    
+  - title: "Talks"
+    url: /talks/    
 
-  - title: "Blog Posts"
-    url: /year-archive/ 
+  # - title: "Blog Posts"
+  #   url: /year-archive/ 
 
   - title: "Resources"
     url: /resources/
