--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Akshay Shankar"
   avatar           : "profile.png"
-  bio              : "5th year BS-MS Physics Major <br> <a style='color: black;' href='https://web.iisermohali.ac.in/dept/physics/index.html'>Department of Physical Sciences</a>, <a style='color: black;' href='https://www.iisermohali.ac.in/'>IISER Mohali</a>"
+  bio              : "1st year PhD student <br> <a style='color: black;' href='https://quantumghent.github.io/'>Quantum Group</a>, <a style='color: black;' href='https://www.ugent.be/en'>Ghent University</a>"
   location         : 
   employer         :
   pubmed           : 
