update avatar image

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Akshay Shankar"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "1st year PhD student <br> <a style='color: black;' href='https://quantumghent.github.io/'>Quantum Group</a>, <a style='color: black;' href='https://www.ugent.be/en'>Ghent University</a>"
   location         : 
   employer         :
