--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,7 +17,7 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Blog Posts"
+  - title: "Blog"
     url: /year-archive/ 
 
   - title: "Resources"
