change blog url

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ main:
   #   url: /talks/    
 
   - title: "Blog"
-    url: /year-archive/ 
+    url: /blog/ 
 
   - title: "Resources"
     url: /resources/
